syntax = "proto3";

package io.protostuff.it;

option java_package = "io.protostuff.it.message_test";

message ParentMsg {
    NestedMsg nested_msg = 1;
    repeated NestedMsg nested_repeated_msg = 2;
}

message NestedMsg {
    string name = 2;
}

message TestMessage {
    int32 a = 1;
}

// Tests maps.
message TestMap {
    map<int32   , int32   > map_int32_int32       = 1;
    map<int64   , int64   > map_int64_int64       = 2;
    map<uint32  , uint32  > map_uint32_uint32     = 3;
    map<uint64  , uint64  > map_uint64_uint64     = 4;
    map<sint32  , sint32  > map_sint32_sint32     = 5;
    map<sint64  , sint64  > map_sint64_sint64     = 6;
    map<fixed32 , fixed32 > map_fixed32_fixed32   = 7;
    map<fixed64 , fixed64 > map_fixed64_fixed64   = 8;
    map<sfixed32, sfixed32> map_sfixed32_sfixed32 = 9;
    map<sfixed64, sfixed64> map_sfixed64_sfixed64 = 10;
    map<int32   , float   > map_int32_float       = 11;
    map<int32   , double  > map_int32_double      = 12;
    map<bool    , bool    > map_bool_bool         = 13;
    map<string  , string  > map_string_string     = 14;
    map<int32   , bytes   > map_int32_bytes       = 15;
    map<int32   , MapEnum > map_int32_enum        = 16;
    map<int32   , SimpleMessage> map_int32_simple_message = 17;
    map<string  , SimpleMessage> map_string_simple_message = 18;
}

enum MapEnum {
    MAP_ENUM_FOO = 0;
    MAP_ENUM_BAR = 1;
    MAP_ENUM_BAZ = 2;
}

message SimpleMessage {
    int32 int32 = 10;
    string string = 11;
    repeated int32 repeated_int32 = 12;
    repeated string repeated_string = 13;
    TestMessage message = 14;
    Enum enum = 15;

    enum Enum {
        CONSTANT = 0;
    }
}

message MessageWithoutFields {

}

message TestOneof {
    oneof oneof_name {
        int32 foo_int = 4;
        string foo_string = 9;
        SimpleMessage simple_message = 10;
        MapEnum map_enum = 11;
        bytes foo_bytes = 12;
        string v1 = 101;
        string v2 = 102;
        string v3 = 103;
        string v4 = 104;
        string v5 = 105;
        string v6 = 106;
        string v7 = 107;
        string v8 = 108;
        string v9 = 109;
    }
}

message TestFieldNamedClass {
    int32 class = 1;
}

message TestReservedNames {

    // https://github.com/protostuff/protostuff-compiler/issues/24
    string result = 1;
}